--- a/notebooks/3-modelling_extraction.ipynb
+++ b/notebooks/3-modelling_extraction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pre-Processing 3: Modelling and Extraction"
+    "# Modelling and Extraction"
    ]
   },
   {
