--- a/notebooks/2-building-features.ipynb
+++ b/notebooks/2-building-features.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook 2: Building Features"
+    "# Building Features"
    ]
   },
   {
