--- a/notebooks/2-building-features.ipynb
+++ b/notebooks/2-building-features.ipynb
@@ -62,6 +62,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I have not used any AI assistance in cell above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The variable `n_prev_matches` is the number of previous matches we will consider to build our team strength metrics. \n",
     "\n",
     "Also, in the following 2 code cells, we will also iterate through all the matches and quickly calculate the xt accumulated by both teams in each match. We will then save that data. I'm not sure if this is the most efficient way of doing this and I think it might be possible to get this data in our main processing loop as well but this was the most straight-forward way so that's what I did.  "
@@ -114,6 +121,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I have not used any AI assistance in cell above."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -156,6 +170,13 @@
     "    n_minutes_period = 10\n",
     "    team_id, minute, match_period = vals\n",
     "    return pdf.query(\"matchPeriod == @match_period & teamId == @team_id & (@minute-@n_minutes_period<=minutes_round<=@minute)\")[\"minute_xt_difference\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Citation : The above code snippet was generated using GPT 5 on 11/18/25 at 3:25p. "
    ]
   },
   {
@@ -269,6 +290,13 @@
     "        \n",
     "        ##save \n",
     "        data.append(df.fillna(0))        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Citation : The above code snippet was generated using GPT 5 on 11/20/25 at 2:14p. "
    ]
   },
   {
