--- a/notebooks/3-modelling_extraction.ipynb
+++ b/notebooks/3-modelling_extraction.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
     "\n",
     "df = pd.read_csv(\"../final_processed_data.csv\")\n",
     "\n",
-    "with open(os.path.join(WYSCOUT_DATA_FOLDER, 'teams.json')) as f:\n",
+    "with open(os.path.join('../teams.json')) as f:\n",
     "    teams_meta = json.load(f)\n",
     "team_names_dict = {t['wyId']:t['name'] for t in teams_meta}\n",
     "\n",
